# cmake-examples

./: .gitignore
example1/: CMakeLists.txt
example2/: CMakeLists.txt  main.cpp  version.cpp  version.h
example3/: CMakeLists.txt  main.cpp  version.cpp  version.h
example4/: CMakeLists.txt
example4/lib/: CMakeLists.txt  lib.cpp
example4/src/: CMakeLists.txt  config.h.in  main.cpp
example5/: CMakeLists.txt
example5/src/: CMakeLists.txt
example5/sumLib/: CMakeLists.txt  sumLib.cpp  sumLib.h
example6/: CMakeLists.txt  main.cpp
example6/cmake/: FindsumLib.cmake
example7/example/: CMakeLists.txt
example7/src/: CMakeLists.txt  logger.cpp  logger.h
